--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ ipch
 *.suo
 *.VC.db
 *.VC.VC.opendb
+output
 sln_x64
 ## Getting files created in JSON/Schemas/Catalog/ from a VS2022 update
 JSON/
